# BikeControl

control/: package.xml  package.xml~  setup.py  setup.py~
control/control/: control.py  control.py~  mpc.py  mpc.py~
control_ws/control_estimation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
control_ws/control_estimation/.cache/clangd/index/: estimation.cpp.95508F3763AC6C5A.idx  estimation.cpp.C1BA12008593E10E.idx
control_ws/control_estimation/log/: latest_build
control_ws/control_estimation/src/: esimation_control.cpp  estimation.cpp
control_ws/control_estimation/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_ws/control_estimation/src/log/: latest_build
